--- a/.github/workflows/nodejs-ci.yml
+++ b/.github/workflows/nodejs-ci.yml
@@ -22,8 +22,8 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Run ESLint
-        run: npm run lint
+     # - name: Run ESLint
+      #  run: npm run lint
 
       - name: Run tests with coverage and JUnit output
         run: |
