--- a/.github/workflows/nodejs-ci.yml
+++ b/.github/workflows/nodejs-ci.yml
@@ -42,4 +42,13 @@ jobs:
           name: junit-results
           path: junit.xml
 
+      - name: SonarCloud Scan
+        uses: SonarSource/sonarcloud-github-action@v2
+        with:
+          args: >
+            -Dsonar.projectKey=NodeJSWeb
+            -Dsonar.organization=abhisheklearnsjava
+        env:
+          SONAR_TOKEN: 'f3f4d596399ca42cb726accc8383568d8ed2354d'
+
     # The workflow will fail if linting or tests fail (non-zero
