--- a/.github/workflows/nodejs-ci.yml
+++ b/.github/workflows/nodejs-ci.yml
@@ -42,8 +42,8 @@ jobs:
           name: junit-results
           path: junit.xml
 
-      - name: Show lcov.info (first few lines)
-        run: head -n 20 coverage/lcov.info
+      - name: what is current location
+        run: pwd
 
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@v2
