--- a/.github/workflows/nodejs-ci.yml
+++ b/.github/workflows/nodejs-ci.yml
@@ -42,8 +42,9 @@ jobs:
           name: junit-results
           path: junit.xml
 
-      - name: what is current location
-        run: pwd
+      - name: Show server.js coverage from lcov
+        run: |
+          grep -A10 "SF:server.js" coverage/lcov.info
 
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@v2
@@ -54,6 +55,7 @@ jobs:
             -Dsonar.organization=abhisheklearnsjava
             -Dsonar.inclusions=server.js
             -Dsonar.javascript.lcov.reportPaths=coverage/lcov.info
+            -Dsonar.verbose=true
         env:
           SONAR_TOKEN: 'f3f4d596399ca42cb726accc8383568d8ed2354d'
 
