--- a/.github/workflows/nodejs-ci.yml
+++ b/.github/workflows/nodejs-ci.yml
@@ -56,6 +56,8 @@ jobs:
             -Dsonar.inclusions=server.js
             -Dsonar.javascript.lcov.reportPaths=coverage/lcov.info
             -Dsonar.verbose=true
+            -Dsonar.testExecutionReportPaths=test-report/junit.xml
+            -Dsonar.verbose=true
         env:
           SONAR_TOKEN: 'f3f4d596399ca42cb726accc8383568d8ed2354d'
 
