--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "eslint": "^9.31.0",
     "globals": "^16.3.0",
     "jest": "^29.7.0",
+    "jest-junit": "^16.0.0",
     "supertest": "^7.1.3"
   },
   "dependencies": {
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "xml2js": "^0.6.2"
   }
 }
