--- a/.github/workflows/nodejs-ci.yml
+++ b/.github/workflows/nodejs-ci.yml
@@ -42,9 +42,9 @@ jobs:
           name: junit-results
           path: junit.xml
 
-      - name: Show server.js coverage from lcov
+      - name: convert JUnit to Sonar format
         run: |
-          grep -A10 "SF:server.js" coverage/lcov.info
+          node convert-junit-to-sonar.js
 
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@v2
@@ -56,8 +56,7 @@ jobs:
             -Dsonar.inclusions=server.js
             -Dsonar.javascript.lcov.reportPaths=coverage/lcov.info
             -Dsonar.verbose=true
-            -Dsonar.testExecutionReportPaths=junit.xml
-            -Dsonar.verbose=true
+            -Dsonar.testExecutionReportPaths=./sonar-test.xml
         env:
           SONAR_TOKEN: 'f3f4d596399ca42cb726accc8383568d8ed2354d'
 
