--- a/.github/workflows/nodejs-ci.yml
+++ b/.github/workflows/nodejs-ci.yml
@@ -51,7 +51,8 @@ jobs:
         with:
           args: >
             -Dsonar.sources=.
-            -Dsonar.tests=.
+            -Dsonar.tests=server.test.js
+            -Dsonar.inclusions=server.js
             -Dsonar.projectKey=abhisheklearnsjava_NodeJSWeb
             -Dsonar.organization=abhisheklearnsjava
             -Dsonar.javascript.lcov.reportPaths=coverage/lcov.info
