--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   },
   "dependencies": {
     "express": "^5.1.0",
-    "xml2js": "^0.6.2"
+    "xml2js": "^0.6.2",
+    "lodash": "4.17.20" 
+    
   }
 }
