--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "dependencies": {
     "express": "^5.1.0",
     "xml2js": "^0.6.2",
-    "lodash": "4.17.20" 
+    "lodash": "4.17.20" ,
+    "minimist": "0.0.8" 
     
   }
 }
