--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
     "jest": "^29.7.0",
     "jest-junit": "^16.0.0",
     "supertest": "^7.1.3"
-  },
+  }, 
   "dependencies": {
     "express": "^5.1.0",
     "xml2js": "^0.6.2",
-    "lodash": "4.17.20" ,
-    "minimist": "0.0.8" 
+    "lodash": "4.17.20" 
+      
     
   }
 }
