--- a/.github/workflows/nodejs-ci.yml
+++ b/.github/workflows/nodejs-ci.yml
@@ -25,26 +25,26 @@ jobs:
      # - name: Run ESLint
       #  run: npm run lint
 
-      - name: Run tests with coverage and JUnit output
-        run: |
-          npm install --save-dev jest-junit
-          npx jest --coverage --ci --reporters=default --reporters=jest-junit
+      # - name: Run tests with coverage and JUnit output
+      #   run: |
+      #     npm install --save-dev jest-junit
+      #     npx jest --coverage --ci --reporters=default --reporters=jest-junit
 
-      - name: Upload coverage report
-        uses: actions/upload-artifact@v4
-        with:
-          name: coverage-report
-          path: coverage/
+      # - name: Upload coverage report
+      #   uses: actions/upload-artifact@v4
+      #   with:
+      #     name: coverage-report
+      #     path: coverage/
 
-      - name: Upload JUnit test results
-        uses: actions/upload-artifact@v4
-        with:
-          name: junit-results
-          path: junit.xml
+      # - name: Upload JUnit test results
+      #   uses: actions/upload-artifact@v4
+      #   with:
+      #     name: junit-results
+      #     path: junit.xml
 
-      - name: convert JUnit to Sonar format
-        run: |
-          node convert-junit-to-sonar.js
+      # - name: convert JUnit to Sonar format
+      #   run: |
+      #     node convert-junit-to-sonar.js
 
       # - name: SonarCloud Scan
       #   uses: SonarSource/sonarcloud-github-action@v2
@@ -61,11 +61,17 @@ jobs:
       #   env:
       #     SONAR_TOKEN: 'f3f4d596399ca42cb726accc8383568d8ed2354d'
 
-      - name: Run Snyk
-        uses: snyk/actions/node@0.4.0
-        env:
-          SNYK_TOKEN: ${{ secrets.SNYK_SECRET }}
-        with:
-          command: test
+      # - name: Run Snyk
+      #   uses: snyk/actions/node@0.4.0
+      #   env:
+      #     SNYK_TOKEN: ${{ secrets.SNYK_SECRET }}
+      #   with:
+      #     command: test
 
     # The workflow will fail if linting or tests fail (non-zero
+
+      - name: ZAP Baseline Scan with Gate
+        uses: zaproxy/action-baseline@v0.9.0
+        with:
+          target: 'http://localhost:8080'
+          fail_action: true 
