--- a/.github/workflows/nodejs-ci.yml
+++ b/.github/workflows/nodejs-ci.yml
@@ -72,7 +72,7 @@ jobs:
     # exit code), or if Snyk finds vulnerabilities.- name: Install dependencies
 
       - name: Start the server   
-        run: npm start
+        run: npm start &
       - name: ZAP Baseline Scan with Gate
         uses: zaproxy/action-baseline@v0.9.0
         with:
