--- a/.github/workflows/nodejs-ci.yml
+++ b/.github/workflows/nodejs-ci.yml
@@ -73,8 +73,23 @@ jobs:
 
       - name: Start the server   
         run: npm start &
-      - name: ZAP Baseline Scan with Gate
-        uses: zaproxy/action-baseline@v0.9.0
+      # - name: ZAP Baseline Scan with Gate
+      #   uses: zaproxy/action-baseline@v0.9.0
+      #   with:
+      #     target: 'http://localhost:3000'
+      #     fail_action: true 
+      - name: Download ZAP
+        run: |
+          wget https://github.com/zaproxy/zaproxy/releases/download/v2.14.0/ZAP_2_14_0_unix.sh -O zap.sh
+          chmod +x zap.sh
+          ./zap.sh -q -dir zap-home
+      - name: Run ZAP baseline scan (non-Docker)
+        run: |
+          ./zap-home/zap.sh -cmd -quickurl http://localhost:3000 -quickout zap-report.xml -quickprogress
+
+      - name: Upload ZAP Report
+        if: always()
+        uses: actions/upload-artifact@v4
         with:
-          target: 'http://localhost:3000'
-          fail_action: true 
+          name: zap-report
+          path: zap-report.xml    
